--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
   frontend:
     build:
-      context: ./Markov-GUI/Dockerfile
+      context: ./Markov-GUI
     ports:
       - "3000:3000"
     environment:
@@ -14,7 +14,7 @@ services:
 
   backend:
     build:
-      context: ./Markov-Bot/Dockerfile
+      context: ./Markov-Bot/docker-app
     ports:
       - "8889:8889"
     networks:
